--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -464,8 +464,7 @@ section
 	font-family: 'Open Sans', sans-serif;
 	font-size: 30px;
 	color: #f4f4f8;
-	font-weight: 800;
-	/* text-transform: uppercase; */
+	font-weight: 800;	
 }
 .logo a h6 {
 	text-align: right;
@@ -756,7 +755,7 @@ section
 .home
 {
 	width: 100%;
-	height: 100vh;
+	height: 73vh;
 }
 
 
@@ -1000,8 +999,7 @@ section
 }
 .search
 {
-	width: 100%;
-	height: 157px;
+	width: 100%;	
 	background: linear-gradient(to right, #fa9e1b, #8d4fff);
 	z-index: 10;
 }
@@ -1091,6 +1089,7 @@ section
 	display: none !important;
 	width: 100%;
 	height: 100%;
+	padding: 0 !important;
 	-webkit-animation: fadeEffect 1s;
     animation: fadeEffect 1s;
 }
