--- a/styles/offers_styles.css
+++ b/styles/offers_styles.css
@@ -450,6 +450,11 @@ section
 	-o-transform: translateY(-6px);
 	transform: translateY(-6px);
 }
+.logo_text {	
+	color: #fffff;
+	bottom: 10px;
+	position: top;
+}
 .header.scrolled .logo_container
 {
 	-webkit-transform: none;
@@ -463,8 +468,10 @@ section
 	font-family: 'Open Sans', sans-serif;
 	font-size: 30px;
 	color: #f4f4f8;
-	font-weight: 800;
-	text-transform: uppercase;
+	font-weight: 800;	
+}
+.logo a h6 {
+	text-align: right;
 }
 .logo a img
 {
@@ -757,7 +764,7 @@ section
 .home
 {
 	width: 100%;
-	height: 465px;
+	height: 76vh;
 	background: transparent;
 }
 .home_background
@@ -789,6 +796,270 @@ section
 	color: #FFFFFF;
 	text-transform: uppercase;
 	white-space: nowrap;
+}
+
+/*********************************
+
+5. Search
+*********************************/
+
+.new_f-container{
+	background: none !important;
+	margin-top: 60px !important;
+	justify-content: space-between;
+}
+.new_f-title {
+	display: none;	
+}
+.new_f-wrapper-bg-imgs {
+	background: none !important;
+}
+.new_f-form-field {
+	margin-right: 20px;
+	margin-left: 20px;
+	border-radius: 20px !important;
+} 
+.clearfix {
+	width: auto !important;
+	text-align: center;
+}
+.new_f-dropdown-btn .cnt {
+	background: none !important;
+}
+.new_f-dropdown-btn .cnt::after, .new_f-dropdown-btn::after {
+	border-color: #fa9e1b transparent transparent !important;
+}
+.new_f-search-dates-wrap svg {
+	fill: #fa9e1b !important;
+}
+.new_f-form .new_f-form-submit {
+	border-radius: 20px !important;
+}
+.new_not-found-message .os-order-form-submit_button, .new_f-ext-container .new_f-dropdown-btn-apply, .new_f-form .new_f-form-submit{
+	background: #fa9e1b !important;
+}
+.new_f-search-dates-popup {
+	background-color: transparent !important;
+	color: #ffff !important;
+	font-size: 16px !important;
+}
+.new_f-form-field::before {
+	background-color: transparent !important;
+}
+.new_f-search-dates-popup:before, .new_f-search-dates-popup:after {
+	display: none;
+}
+.new_f-datepicker-wrap button {
+	background: none !important;
+}
+.search
+{
+	width: 100%;
+	background: linear-gradient(to right, #fa9e1b, #8d4fff);
+	z-index: 10;
+}
+.serch_navlist {
+	/* background: linear-gradient(to right, #fa9e1b, #8d4fff); */
+	/* background-color: #fa9e1b; */
+	border-bottom-right-radius: 30px;
+	border-bottom-left-radius: 30px;
+	/* bottom: 100px; */
+	/* opacity: 0.95; */
+}
+.search_tabs_container
+{
+	position: absolute;
+	bottom: 100%;
+	left: 15px;
+	width: calc(100% - 30px);
+	opacity: 0.9;
+}
+.search_tabs
+{
+	height: 94px;
+}
+.search_tab
+{
+	font-size: 14px;
+	font-weight: 700;
+	color: #2d2c2c;	
+	text-align: center;
+	height: 100%;
+	flex-grow: 1;
+	background: #FFFFFF;
+	cursor: pointer;
+	-webkit-transition: all 200ms ease;
+	-moz-transition: all 200ms ease;
+	-ms-transition: all 200ms ease;
+	-o-transition: all 200ms ease;
+	transition: all 200ms ease;
+}
+.search_tab img
+{
+	margin-right: 10px;
+	-webkit-transition: all 200ms ease;
+	-moz-transition: all 200ms ease;
+	-ms-transition: all 200ms ease;
+	-o-transition: all 200ms ease;
+	transition: all 200ms ease;
+}
+.search_tab:first-child
+{
+	border-top-left-radius: 94px;
+	padding-left: 7px;
+}
+.search_tab:last-child
+{
+	border-top-right-radius: 94px;
+	padding-right: 7px;
+}
+.search_tab.active
+{
+	background: #fa9e1b;
+	color: #FFFFFF;	
+}
+.search_tab.active img
+{
+	-webkit-filter: brightness(200%) grayscale(100%);
+	-moz-filter: brightness(200%) grayscale(100%);
+	-ms-filter: brightness(200%) grayscale(100%);
+	-o-filter: brightness(200%) grayscale(100%);
+  	filter: brightness(200%) grayscale(100%);  	
+}
+.search_tab:hover
+{
+	background: #fa9e1b;
+	color: #FFFFFF;
+}
+.search_tab:hover img
+{
+	-webkit-filter: brightness(200%) grayscale(100%);
+	-moz-filter: brightness(200%) grayscale(100%);
+	-ms-filter: brightness(200%) grayscale(100%);
+	-o-filter: brightness(200%) grayscale(100%);
+  	filter: brightness(200%) grayscale(100%);
+}
+.search_panel
+{
+	display: none !important;
+	width: 100%;
+	height: 100%;
+	padding: 0 !important;
+	-webkit-animation: fadeEffect 1s;
+    animation: fadeEffect 1s;
+}
+.search_panel.active
+{
+	display: flex!important;
+}
+/* Fade in tabs */
+@-webkit-keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+@keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+.search_panel_content
+{
+	width: 100%;
+	height: 100%;
+}
+.search_input
+{
+	width: 100%;
+	height: 46px;
+	border: none;
+	outline: none;
+	padding-left: 15px;
+	padding-right: 15px;
+	font-size: 13px;
+	font-weight: 600;
+	color: #929191;
+}
+.search_item:first-child
+{
+	width: 30.453%;
+}
+.search_item:nth-child(2)
+{
+	width: 13.961%;
+}
+.search_item:nth-child(3)
+{
+	width: 9.947%;
+}
+.search_item:nth-child(4)
+{
+	width: 13.961%;
+}
+.search_item:nth-child(5)
+{
+	width: 9.947%;
+}
+.search_item div
+{
+	font-size: 13px;
+	font-weight: 700;
+	color: #FFFFFF;	
+	margin-bottom: 14px;
+}
+.dropdown_item_select
+{
+	-webkit-appearance:none;
+    -moz-appearance:none;
+    -ms-appearance:none;
+    -o-appearance:none;
+    appearance:none;
+	-webkit-box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
+	-webkit-user-select: none;
+	background-image: url(../images/dropdown.png);
+	background-position: center right;
+	background-repeat: no-repeat;
+	border: solid 1px #FFFFFF;
+	margin: 0;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	cursor: pointer;
+}
+.dropdown_item_select::-ms-expand
+{
+    display: none;
+}
+.dropdown_item_select:hover
+{
+	border: solid 1px #fa9e1c;
+}
+.dropdown_item_select:focus
+{
+	outline-color: #fa9e1c;
+}
+.search_button
+{
+	font-size: 13px;
+	font-weight: 700;
+	color: #fff;
+	/* text-transform: uppercase; */
+	line-height: 53px;
+	padding-left: 46px;
+	padding-right: 46px;
+	/* background: #31124b; */
+	background: #fa9e1b;
+	-webkit-transform: translateY(15px);
+	-moz-transform: translateY(15px);
+	-ms-transform: translateY(15px);
+	-o-transform: translateY(15px);
+	transform: translateY(15px);
+	border: none;
+	outline: none;
+	cursor: pointer;
+}
+.search_button:hover
+{
+	opacity: 0.8;
 }
 
 /*********************************
